# stock-agent-ops

./: .dockerignore  .env  .env.example  .gitignore  README.md  app.py  compare_transfer_learning.py  docker-compose.yml  dockerfile  document.md  main.py  pyproject.toml  requirements.txt  run_docker.sh  run_k8s.sh  script.py  test_mlflow.py  test_mlflow_connection.py  verify_mlflow.py
api/: app.py  models.py
api/routes/: health.py  inference.py  training.py
backend/: Dockerfile  api.py  main.py  rate_limiter.py  requirements.txt  schemas.py  state.py  tasks.py
doc/: AWS.md  architecture_and_roadmap.md  commands.md  k8s.md  local_technical_architecture.md  modules.md  system_design.md
feature_repo/: feature_store.yaml  features.py
feature_repo/data/: features.parquet  registry.db
feature_store/: features.py
feature_store/data/: features.parquet
frontend/: Dockerfile  app.py
grafana/: grafana-dashboard.json  grafana.db
k8s/: fastapi.yaml  frontend.yaml  grafana.yaml  monitoring-app.yaml  prometheus.yaml  qdrant.yaml  redis.yaml  volumes.yaml
logger/: logger.py
mlruns/0/: meta.yaml
monitoring_app/: Dockerfile  app.py
notebooks/: informer.ipynb  prod_file.ipynb
outputs/AAPL/: AAPL_child_model.onnx  AAPL_child_model.pt  AAPL_child_scaler.pkl  AAPL_metrics.json
outputs/AMZN/: AMZN_child_forecast.json  AMZN_child_metrics.json  AMZN_child_model.onnx  AMZN_child_model.pt  AMZN_child_scaler.pkl  AMZN_inference_forecast.json  AMZN_metrics.json  model.onnx  model.pt
outputs/AXP/: AXP_child_forecast.json  AXP_child_metrics.json  AXP_child_scaler.pkl  model.onnx  model.pt
outputs/GOOG/: GOOG_child_forecast.json  GOOG_child_metrics.json  GOOG_child_scaler.pkl  GOOG_inference_forecast.json  model.onnx  model.pt
prometheus/: prometheus.yml
src/: config.py  exception.py  inference.py  logger.py  rate_limiter.py  utils.py
(+64 files in other folders)
