[project]
name = "mlops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "comet-ml>=3.52.1",
    "fastapi>=0.116.1",
    "matplotlib>=3.10.6",
    "mlflow>=3.3.2",
    "numpy>=2.3.3",
    "onnxruntime>=1.22.1",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
]
